<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:padding="10dp"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/tvConfirm"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="#ffffff"
        android:gravity="center_horizontal|top"
        android:text="@string/confirm_delete"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:background="#00ffffff"
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
        <Button
            android:textColor="#ffffff"
            android:layout_gravity="bottom"
            android:background="#00ffffff"
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>


    </LinearLayout>

</LinearLayout>