<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10.5"
    android:padding="5dp"
    android:background="@drawable/border">
    <TextView
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:text="@string/activity_info"
        android:gravity="center"
        android:textSize="20sp"/>
    <TextView
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/name_of_note"/>

    <ScrollView
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    <TextView
        android:text="@string/name_of_note"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </ScrollView>

    <TextView
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/detail_of_note"/>

    <ScrollView
        android:background="@drawable/border"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
        android:text="@string/detail_of_note"
        android:textColor="#ffffff"
        android:layout_margin="5dp"
        android:id="@+id/tvDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    </ScrollView>


    <TextView
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/when_event_start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="21/12/1997"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/tvDate"/>
        <TextView
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:text="20:30"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/tvTime"/>
    </LinearLayout>

    <Button
        android:textColor="#fff"
        android:background="#00ffffff"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:id="@+id/btnClose"
        android:text="OK"/>

</LinearLayout>